src/components/HumanCardPage/human-card-page.scss
.human-card-page {
  width: 1130px;
  margin: 0 auto;

  .upper-block {
    display: flex;

    .validators, .linked-property {
      margin-left: 30px;
      
      h2 {
        font-size: 12px;
        color: #888888;
        text-transform: uppercase;
      }
    }

    .property-list, .validators-list {
      margin-top: 5px;
    }

  }

  .validators-graph {
    width: 1130px;
    min-height: 800px;
    background-color: #fff;
    margin-top: 20px;
    border-radius: 3px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
  }
}

.human-card-navigation-wrapper {
  width: 100%;
  height: 46px;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
  position: relative;
  background: #fafafa;

  .human-card-navigation-container {
    width: 1130px;
    margin: 0 auto;

    .user-info {
      left: calc(50% - 570px);
      top: 4px;
      position: absolute;
      
      a {
        display: flex;
      }
  
      img, span {
        display: block;
      }
      
      img {
        margin: 6px 0 0 14px;
        width: 27px;
        height: 27px;
        cursor: pointer;
        border-radius: 50%;
      }
  
      span {
        font-size: 14px;
        margin-top: 5px;
        align-self: center;
        margin-left: 7px;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        cursor: pointer;
      }
    }
  
    .human-page-breadcrumb {
      margin-left: 235px;
  
      a, span {
        display: inline-block;
        line-height: 46px;
        font-size: 16px;
        color: #424242;
      }
      
      .chevron-right {
        background: url(../img/Icons/chevron-right.svg) no-repeat;
        font-size: 12px;
        margin-left: 16px;
        margin-right: 16px; 
        height: 12px;
        width: 7.5px;
      }
  
      .scroll-to {
        cursor: pointer;
      }
    }
  }
}

